# Job-Op-Resume

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/job-scraper/: SKILL.md
.claude/skills/resume-generator/: SKILL.md
resume/: Review_Evidence_sample.md  main_resume_sample.md
scripts/: build_resume.py  convert_resume.ps1  log_resume.py  measure_resume.py
