[project]
name = "job-op-resume"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "docx2pdf>=0.1.8",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "scrapling[ai]",
]

[tool.uv.sources]
scrapling = { git = "https://github.com/D4Vinci/Scrapling" }
